@@ -27,7 +27,40 @@ require 5.008;
 print "\nIf you want to use the TermUI interface, you should install\n",
   "Term::ReadLine::Perl or Term::ReadLine::Gnu\n\n";
 
-my $build = Module::Build->new
+
+my $code = << 'EOF';
+
+use Text::Template ;
+my %models = ( popcon => [ 'PopCon', '/etc/popularity-contest.conf']) ;
+
+sub process_tmpl_files {
+  my $self = shift;
+  print "process_tmpl_files called\n";
+  my $template = Text::Template->new(SOURCE => 'config-edit.tmpl')
+    or die "Couldn't construct template: $Text::Template::ERROR";
+
+  foreach (keys %models) {
+    my $v = $models{$_} ;
+    my %vars = ( name => $_,  model => $v->[0], conf_file => $v->[1]) ;
+    my $fout = "blib/script/config-edit-$_" ;
+    print "Creating $fout\n";
+    my $result = $template->fill_in( HASH => \%vars) ;
+    if (defined $result) { 
+      open (FOUT, "> $fout") || die "Can't open $fout:$!";
+      print FOUT $result;
+      close FOUT ;
+      chmod 0755,$fout || die "Can't chmod $fout:$!";
+    }
+    else { die "Couldn't fill in template: $Text::Template::ERROR"  ; }
+  }
+}
+
+EOF
+
+my $class = Module::Build->subclass(code => $code);
+
+
+my $build = $class->new
   (
    module_name    => 'Config::Model',
    license        => 'lgpl',
@@ -49,6 +82,7 @@ my $build = Module::Build->new
 		     },
    build_requires => {
 		      'Config::Tiny'      => 0,
+                      'Text::Template'    => 0,
 		      'Test::More'        => 0,
 		      'Test::Exception'   => 0,
 		      'Test::Warn'        => '0.11', # tests fail with 0.08
@@ -62,5 +96,6 @@ my $build = Module::Build->new
    add_to_cleanup => [qw/PreGrammar.pm wr_root r_root/],
   );
 
+$build->add_build_element('tmpl');
 $build->add_build_element('pl');
 $build->create_build_script;
