@@ -1,0 +1,11 @@
+This distribution provides models for the following files (following
+Debian's config file locations) :
+
+- /etc/popularity-contest.conf (for Popcon)
+
+Other models:
+
+- /etc/approx/approx.conf in Config::Model::Approx
+- /etc/ssh/sshd_config in Config::Model::OpenSsh
+- /etc/ssh/ssh_config in Config::Model::OpenSsh
+- ~/.ssh/config in Config::Model::OpenSsh
